UI desing mobiles finished

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
   <div id="input_day" class="input__day box__inputs">
     <label class="label warning-label--" for="day">day</label>
     <input class="inputs warning--" placeholder="DD" type="number" id="day">
-    <!-- <span class="warning_text">year invalid !</span> -->
+     <span id="invalid__day" class="warning_text">DAY invalid !</span>
   </div>
   <div id="input_month" class="input__month box__inputs">
     <label class="label warning-label--" for="month">month</label>
     <input class="inputs warning--" placeholder="MM"  type="number" id="month">
-    <!-- <span class="warning_text">month invalid !</span> -->
+     <span id="invalid__month" class="warning_text">MONTH invalid !</span>
   </div>
   <div id="input_year" class="input__year box__inputs">
     <label class="label warning-label--" for="year">year</label>
     <input class="inputs warning--" placeholder="YY" type="number" id="year">
-   <!-- <span class="warning_text">day invalid !</span> -->
+  <span id="invalid__year" class="warning_text">YEAR invalid !</span> 
   </div>
 </section>
 
