agg texto de advertencia de inputs vacios

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
   <div id="input_month" class="input__month box__inputs">
     <label class="label warning-label--" for="month">month</label>
-    <input class="inputs warning--" placeholder="MM"  type="number" id="month">
+    <input class="inputs warning--" placeholder="MM"  twwype="number" id="month">
      <span id="invalid__month" class="warning_text">MONTH invalid !</span>
   </div>
   <div id="input_year" class="input__year box__inputs">
